--- a/mongoconnect/src/main/resources/application.properties
+++ b/mongoconnect/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=mongoconnect
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password123
+spring.data.mongodb.database=mydatabase
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
